--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>receipt-finder</title>
+    <title>recipe-finder</title>
     <link rel="stylesheet" href="src/styles/global.css" />
   </head>
   <body>
